--- a/.gitignore
+++ b/.gitignore
@@ -287,6 +287,10 @@ TSWLatexianTemp*
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
 
+# Emacs
+\#*#
+*~
+
 # Coq
 .coqdeps.d
 *.vo
