--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,7 @@ stages:
       - ".*.cache"
       - "_build"
 
-"8.16.1":   {<<: *build, image: "ghcr.io/katamaran-project/coq:8.16.1_iris-3.6.0_equations-1.3"}
+"8.16.1-iris36":   {<<: *build, image: "ghcr.io/katamaran-project/coq:8.16.1_iris-3.6.0_equations-1.3"}
+"8.16.1-iris40":   {<<: *build, image: "ghcr.io/katamaran-project/coq:8.16.1_iris-4.0.0_equations-1.3"}
+"8.17.0-iris40":   {<<: *build, image: "ghcr.io/katamaran-project/coq:8.17.0_iris-4.0.0_equations-1.3"}
 #dev:   {<<: *build, image: "ghcr.io/katamaran-project/coq:dev"}
