--- a/coq-decrn-em.opam
+++ b/coq-decrn-em.opam
@@ -18,6 +18,7 @@ build: [make "-j%{jobs}%"]
 install: [make "install"]
 depends: [
   "coq" 
+  "coq-equations" {>= "1.3"}
   "coq-iris" {>= "4.0.0"}
 ]
 
