--- a/meta.yml
+++ b/meta.yml
@@ -19,5 +19,12 @@ tested_coq_opam_versions:
 
 dependencies:
 - opam:
+    name: coq-equations
+    version: '{>= "1.3"}'
+    description: |-
+      [Equations](https://github.com/mattam82/Coq-Equations) 1.3 or later
+- opam:
     name: coq-iris
     version: '{>= "4.0.0"}'
+    description: |-
+      [Iris](https://iris-project.org/) 4.0 or later
