--- a/.github/workflows/docker-action.yml
+++ b/.github/workflows/docker-action.yml
@@ -17,8 +17,11 @@ jobs:
     strategy:
       matrix:
         image:
-          - 'coqorg/coq:8.16'
-          - 'coqorg/coq:8.17'
+          - 'ghcr.io/katamaran-project/coq:8.16.1_iris-4.1.0_equations-1.3'
+          - 'ghcr.io/katamaran-project/coq:8.17.1_iris-4.1.0_equations-1.3'
+          - 'ghcr.io/katamaran-project/coq:8.18.0_iris-4.1.0_equations-1.3'
+          - 'ghcr.io/katamaran-project/coq:8.18.0_iris-4.2.0_equations-1.3'
+          - 'ghcr.io/katamaran-project/coq:8.19.2_iris-4.2.0_equations-1.3'
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
