--- a/.github/workflows/docker-action.yml
+++ b/.github/workflows/docker-action.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: coq-community/docker-coq-action@v1
         with:
-          opam_file: 'coq-decrn-em.opam'
+          opam_file: 'coq-tilogics.opam'
           custom_image: ${{ matrix.image }}
 
 
