--- a/coq-tilogics.opam
+++ b/coq-tilogics.opam
@@ -2,12 +2,12 @@
 # Follow the instructions on https://github.com/coq-community/templates to regenerate.
 
 opam-version: "2.0"
-maintainer: "steven.keuchel@gmail.com"
+maintainer: "decrn@users.noreply.github.com"
 version: "dev"
 
-homepage: "https://github.com/decrn/em"
-dev-repo: "git+https://github.com/decrn/em.git"
-bug-reports: "https://github.com/decrn/em/issues"
+homepage: "https://github.com/decrn/tilogics"
+dev-repo: "git+https://github.com/decrn/tilogics.git"
+bug-reports: "https://github.com/decrn/tilogics/issues"
 
 
 synopsis: ""
@@ -17,9 +17,9 @@ description: """
 build: [make "-j%{jobs}%"]
 install: [make "install"]
 depends: [
-  "coq" 
-  "coq-equations" {>= "1.3"}
-  "coq-iris" {>= "4.0.0"}
+  "coq" {(>= "8.16" & < "8.20~") | (= "dev")}
+  "coq-equations" {(>= "1.3" & < "1.4") | (= "dev")}
+  "coq-iris" {(>= "4.1" & < "4.3") | (= "dev")}
 ]
 
 tags: [
