--- a/meta.yml
+++ b/meta.yml
@@ -6,25 +6,30 @@ authors:
 - name: "Denis Carnier"
   email: "decrn@users.noreply.github.com"
 
-opam-file-maintainer: "steven.keuchel@gmail.com"
+opam-file-maintainer: "decrn@users.noreply.github.com"
 organization: decrn
-shortname: em
+shortname: tilogics
 
 action: true
-opam_name: coq-decrn-em
+opam_name: coq-tilogics
 branch: main
+supported_coq_versions:
+  text: 8.16 or later
+  opam: '{(>= "8.16" & < "8.20~") | (= "dev")}'
 tested_coq_opam_versions:
 - version: '8.16'
 - version: '8.17'
+- version: '8.18'
+- version: '8.19'
 
 dependencies:
 - opam:
     name: coq-equations
-    version: '{>= "1.3"}'
+    version: '{(>= "1.3" & < "1.4") | (= "dev")}'
     description: |-
       [Equations](https://github.com/mattam82/Coq-Equations) 1.3 or later
 - opam:
     name: coq-iris
-    version: '{>= "4.0.0"}'
+    version: '{(>= "4.1" & < "4.3") | (= "dev")}'
     description: |-
-      [Iris](https://iris-project.org/) 4.0 or later
+      [Iris](https://iris-project.org/) 4.1 or later
